# JD95.github.io

./: #index.html#  .gitignore  about.html  about.markdown  about.markdown~  archive.html  contact.html  index.html  index.org  site.cabal  site.hs  stack.yaml
css/: default.css
drafts/: #learning-cursive.markdown#  #the-three-stages-of-learning.markdown#  commonads-and-objects-in-haskell.markdown  dealing-with-mental-fatigue.markdown  dealing-with-mental-fatigue.markdown~  emotional-resonance-with-music.markdown  handwriting-week-two.markdown  hanoi-with-binary-and-haskell.markdown  how-to-tie-your-shoes.markdown~  identity-and-social-conformity.markdown  learning-cursive.markdown~  sentiment-analysis-of-supreme-court-justices-part-1.markdown  sentiment-analysis-of-supreme-court-justices-part-1.markdown~  the-meaning-of-life.markdown  the-three-stages-of-learning.markdown  the-three-stages-of-learning.markdown~
posts/: 2017-01-02-testing-highlighting.html  2017-01-02-testing-highlighting.markdown  2017-01-28-learning-cursive.html  2017-01-28-learning-cursive.markdown  2017-01-29-how-to-tie-your-shoes.html  2017-01-29-how-to-tie-your-shoes.markdown  2017-02-06-handwriting-week-two.html  2017-02-06-handwriting-week-two.markdown  2017-02-17-the-three-stages-of-learning.html  2017-02-17-the-three-stages-of-learning.markdown  2017-04-09-on-motivation.html  2017-04-09-on-motivation.markdown  2017-06-05-normally-strange.html  2017-06-05-normally-strange.markdown  2017-07-23-mind-map.html  2017-07-23-mind-map.markdown
templates/: default.html
