name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , regex-tdfa >= 1.2.2
                  , array >= 0.5.1.1
  ghc-options:      -threaded
  default-language: Haskell2010
